--- a/docs/code-quality/c26441.md
+++ b/docs/code-quality/c26441.md
@@ -7,27 +7,27 @@ f1_keywords:
 helpviewer_keywords:
 - C26441
 ms.assetid: f923c422-ed01-4644-b40b-93f15fc5bb93
-ms.openlocfilehash: 0e6d609ee8b24f40aa06250515f5e60d088a2289
-ms.sourcegitcommit: c123cc76bb2b6c5cde6f4c425ece420ac733bf70
+ms.openlocfilehash: a7209e148b4fec632b63e557f4c33fd05ff85d80
+ms.sourcegitcommit: ec6dd97ef3d10b44e0fedaa8e53f41696f49ac7b
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/14/2020
-ms.locfileid: "81369889"
+ms.lasthandoff: 08/25/2020
+ms.locfileid: "88839251"
 ---
-# <a name="c26441-no_unnamed_guards"></a>C26441 NO_UNNAMED_GUARDS
+# <a name="c26441-no_unnamed_guards"></a>NO_UNNAMED_GUARDS C26441
 
-"Gli oggetti di protezione devono essere denominati."
+"Gli oggetti Guard devono essere denominati".
 
-**Linee guida**di base : CP.44: Ricordati di dare un nome alla tua lock_guards e unique_locks
+**Linee guida di base di C++**: [CP. 44](https://github.com/isocpp/CppCoreGuidelines/blob/master/CppCoreGuidelines.md#cp44-remember-to-name-your-lock_guards-and-unique_locks): ricordare di assegnare un nome al lock_guards e unique_locks
 
-La libreria standard fornisce alcune classi utili che consentono di controllare l'accesso simultaneo alle risorse. Gli oggetti di questi tipi bloccano l'accesso esclusivo per tutta la durata della loro durata. Ciò implica che ogni oggetto di blocco deve essere denominato, vale a dire avere una durata chiaramente definita che si estende per tutto il periodo in cui vengono eseguite le operazioni di accesso. Pertanto, la mancata assegnazione di un oggetto di blocco a una variabile è un errore che disabilita in modo efficace il meccanismo di blocco (perché le variabili temporanee sono temporanee). Questa regola tenta di rilevare casi semplici di tale comportamento indesiderato.
+La libreria standard fornisce alcune classi utili che consentono di controllare l'accesso simultaneo alle risorse. Gli oggetti di tali tipi bloccano l'accesso esclusivo per tutta la durata del ciclo di vita. Questo implica che tutti gli oggetti di blocco devono essere denominati, ovvero avere una durata ben definita che si estende lungo il periodo in cui vengono eseguite le operazioni di accesso. Quindi, la mancata assegnazione di un oggetto Lock a una variabile è un errore che in realtà Disabilita il meccanismo di blocco (poiché le variabili temporanee sono temporanee). Questa regola tenta di rilevare semplici casi di comportamento imprevisto.
 
 ## <a name="remarks"></a>Osservazioni
 
-- Vengono tracciasolo solo i tipi di blocco standard: std::scoped_lock, std::unique_lock e std::lock_quard.
-  - Vengono analizzate solo le chiamate semplici ai costruttori. Un'espressione dell'inizializzatore più complessa può portare a risultati imprecisi, ma si tratta piuttosto di uno scenario insolito.
+- Vengono rilevati solo i tipi di blocco standard: std:: scoped_lock, std:: unique_lock e std:: lock_quard.
+  - Vengono analizzate solo le chiamate semplici ai costruttori. Un'espressione di inizializzazione più complessa può produrre risultati non accurati, ma si tratta piuttosto di uno scenario insolito.
   - I blocchi passati come argomenti alle chiamate di funzione o restituiti come risultati delle chiamate di funzione vengono ignorati.
-  - I blocchi creati come temporanei ma assegnati a riferimenti denominati per estenderne la durata vengono ignorati.
+  - I blocchi creati come temporaries ma assegnati ai riferimenti denominati per estenderne la durata vengono ignorati.
 
 ## <a name="example"></a>Esempio
 
@@ -46,7 +46,7 @@ void print_diagnostic(gsl::string_span<> text)
 }
 ```
 
-variabile con ambito mancante - corretta
+variabile con ambito mancante-con correzione
 
 ```cpp
 void print_diagnostic(gsl::string_span<> text)
