--- a/docs/code-quality/c26417.md
+++ b/docs/code-quality/c26417.md
@@ -7,18 +7,18 @@ f1_keywords:
 helpviewer_keywords:
 - C26417
 ms.assetid: 0e09fcc6-f9eb-4404-b51e-5815705c6afb
-ms.openlocfilehash: 7402c9c207e32930eadbc0ec5186b547e01c3b78
-ms.sourcegitcommit: 7bea0420d0e476287641edeb33a9d5689a98cb98
+ms.openlocfilehash: 05208fd9edc684d23bf40ecb66803199fe1449e3
+ms.sourcegitcommit: ec6dd97ef3d10b44e0fedaa8e53f41696f49ac7b
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 02/17/2020
-ms.locfileid: "77417171"
+ms.lasthandoff: 08/25/2020
+ms.locfileid: "88836959"
 ---
-# <a name="c26417-no_lvalue_ref_shared_ptr"></a>NO_LVALUE_REF_SHARED_PTR C26417
+# <a name="c26417-no_lvalue_ref_shared_ptr"></a>C26417 NO_LVALUE_REF_SHARED_PTR
 
-> Il parametro del puntatore condiviso viene passato per riferimento e non viene reimpostato o riassegnato. Usare T * o T &.
+> Il parametro del puntatore condiviso viene passato per riferimento e non viene reimpostato o riassegnato. Usare invece T * o T&.
 
-Linee guida di base: R. 35: prendere un shared_ptr\<widget > parametro & per esprimere che una funzione potrebbe riposizionare il puntatore condiviso **C++**
+**Linee guida di base di C++**: [R. 35](https://github.com/isocpp/CppCoreGuidelines/blob/master/CppCoreGuidelines.md#r35-take-a-shared_ptrwidget-parameter-to-express-that-a-function-might-reseat-the-shared-pointer): prendere un shared_ptr \<widget> parametro& per esprimere che una funzione potrebbe riposizionare il puntatore condiviso
 
 Il passaggio di puntatori condivisi per riferimento può essere utile negli scenari in cui il codice chiamato aggiorna la destinazione dell'oggetto puntatore intelligente e il chiamante prevede che venga visualizzato tale aggiornamento. L'uso di un riferimento esclusivamente per ridurre i costi di passaggio di un puntatore condiviso è discutibile. Se il codice chiamato accede solo all'oggetto di destinazione e non ne gestisce mai la durata, è più sicuro passare un puntatore o un riferimento non elaborato, anziché esporre i dettagli di gestione delle risorse.
 
