--- a/docs/code-quality/c26465.md
+++ b/docs/code-quality/c26465.md
@@ -6,13 +6,25 @@ f1_keywords:
 - C26465
 helpviewer_keywords:
 - C26465
-ms.openlocfilehash: 71aa2c141238131239d3221d03d2f12472eb0f8d
-ms.sourcegitcommit: 7bea0420d0e476287641edeb33a9d5689a98cb98
+description: Regola CppCoreCheck che impone il tipo di Linee guida di base di C++. 3
+ms.openlocfilehash: a3e497b5dab7fdfd80e4340a79019a6909f9a7a6
+ms.sourcegitcommit: 3628707bc17c99aac7aac27eb126cc2eaa4d07b4
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 02/17/2020
-ms.locfileid: "77416926"
+ms.lasthandoff: 08/31/2020
+ms.locfileid: "89194510"
 ---
 # <a name="c26465-no_const_cast_unnecessary"></a>C26465 NO_CONST_CAST_UNNECESSARY
 
-Non usare `const_cast` per eseguire il cast `const`. `const_cast` non è obbligatorio. la conversione non è stata rimossa da const o dalla volatilità. Vedere [ C++ le linee guida di base Type. 3](https://github.com/isocpp/CppCoreGuidelines/blob/master/CppCoreGuidelines.md#Pro-type-constcast).
+Non usare `const_cast` per eseguire il cast `const` . `const_cast` non è obbligatorio; la conversione non è stata rimossa da const o dalla volatilità. 
+
+## <a name="see-also"></a>Vedere anche
+[Tipo Linee guida di base di C++. 3](https://github.com/isocpp/CppCoreGuidelines/blob/master/CppCoreGuidelines.md#Pro-type-constcast)
+
+## <a name="example"></a>Esempio
+```cpp
+void function(int* const constPtrToInt)
+{
+  auto p = const_cast<int*>(constPtrToInt); // C26465, const is not being removed
+}
+```
