--- a/docs/code-quality/c26466.md
+++ b/docs/code-quality/c26466.md
@@ -6,13 +6,43 @@ f1_keywords:
 - C26466
 helpviewer_keywords:
 - C26466
-ms.openlocfilehash: 7e5d09a5000e993a7baf104c4cb4511017ce3702
-ms.sourcegitcommit: 7bea0420d0e476287641edeb33a9d5689a98cb98
+description: Regola CppCoreCheck che impone Linee guida di base di C++ tipo. 2
+ms.openlocfilehash: 866bbfdeda29c1a8e3873d84ee6ee765f95ed400
+ms.sourcegitcommit: 3628707bc17c99aac7aac27eb126cc2eaa4d07b4
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 02/17/2020
-ms.locfileid: "77418074"
+ms.lasthandoff: 08/31/2020
+ms.locfileid: "89194484"
 ---
-# <a name="c26466-no_static_downcast_polymorphic"></a>C26466 NO_STATIC_DOWNCAST_POLYMORPHIC
+# <a name="c26466-no_static_downcast_polymorphic"></a>NO_STATIC_DOWNCAST_POLYMORPHIC C26466
 
-Non usare `static_cast` downcast. Un cast da un tipo polimorfico deve usare dynamic_cast. Vedere [ C++ linee guida di base tipo. 2](https://github.com/isocpp/CppCoreGuidelines/blob/master/CppCoreGuidelines.md#Pro-type-downcast).
+Non usare `static_cast` downcast. Un cast da un tipo polimorfico deve usare dynamic_cast. 
+
+## <a name="see-also"></a>Vedere anche
+[Tipo Linee guida di base di C++. 2](https://github.com/isocpp/CppCoreGuidelines/blob/master/CppCoreGuidelines.md#Pro-type-downcast)
+
+## <a name="example"></a>Esempio
+```cpp
+struct Base {
+    virtual ~Base();
+};
+
+struct Derived : Base {};
+
+void bad(Base* pb)
+{
+    Derived* test = static_cast<Derived*>(pb); // C26466
+}
+
+void good(Base* pb)
+{
+    if (Derived* pd = dynamic_cast<Derived*>(pb)) 
+    {
+        // ... do something with Derived*
+    }
+    else 
+    {
+        // ... do something with Base*
+    }
+}
+```
