--- a/docs/code-quality/c26471.md
+++ b/docs/code-quality/c26471.md
@@ -6,13 +6,30 @@ f1_keywords:
 - C26471
 helpviewer_keywords:
 - C26471
-ms.openlocfilehash: 4bb83bde22e1a7bfda0cf7e31f547d50b87ab044
-ms.sourcegitcommit: 7bea0420d0e476287641edeb33a9d5689a98cb98
+description: Regola CppCoreCheck che impone Linee guida di base di C++ tipo. 1
+ms.openlocfilehash: 602d2f7367cacf43e89aa52baef4aae6314bbac7
+ms.sourcegitcommit: 3628707bc17c99aac7aac27eb126cc2eaa4d07b4
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 02/17/2020
-ms.locfileid: "77416905"
+ms.lasthandoff: 08/31/2020
+ms.locfileid: "89194523"
 ---
 # <a name="c26471-no_reinterpret_cast_from_void_ptr"></a>C26471 NO_REINTERPRET_CAST_FROM_VOID_PTR
 
-Non usare `reinterpret_cast`. Un cast da void * può usare `static_cast`. Vedere [ C++ linee guida di base digitare. 1](https://github.com/isocpp/CppCoreGuidelines/blob/master/CppCoreGuidelines.md#Pro-type-reinterpretcast).
+Non usare `reinterpret_cast` . Un cast da void * può usare `static_cast` . 
+
+## <a name="see-also"></a>Vedere anche
+[Tipo Linee guida di base di C++. 1](https://github.com/isocpp/CppCoreGuidelines/blob/master/CppCoreGuidelines.md#Pro-type-reinterpretcast)
+
+## <a name="example"></a>Esempio
+```cpp
+void function(void* pValue) 
+{
+    {
+        int* pointerToInt = reinterpret_cast<int*>(pValue); // C26471, use static_cast instead
+    }
+    {
+        int* pointerToInt = static_cast<int*>(pValue); // Good
+    }
+}
+```
