--- a/docs/code-quality/c26100.md
+++ b/docs/code-quality/c26100.md
@@ -7,22 +7,22 @@ f1_keywords:
 helpviewer_keywords:
 - C26100
 ms.assetid: 470ab2b2-5b55-424f-b192-3863a773c892
-ms.openlocfilehash: d233f5e53c11e17fe6c9367e0b654e0ef11f7e22
-ms.sourcegitcommit: 7bea0420d0e476287641edeb33a9d5689a98cb98
+ms.openlocfilehash: b4bff07b1a06de36cb28a8e20021ad6581b14a0b
+ms.sourcegitcommit: c1fd917a8c06c6504f66f66315ff352d0c046700
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 02/17/2020
-ms.locfileid: "77417374"
+ms.lasthandoff: 09/16/2020
+ms.locfileid: "90685870"
 ---
 # <a name="c26100"></a>C26100
 
-> avviso C26100: Race condition. La variabile \<Var > deve essere protetta da blocco \<blocco >.
+> avviso C26100: Race condition. La variabile \<var> deve essere protetta dal blocco \<lock> .
 
-L'annotazione `_Guarded_by_` nel codice specifica il blocco da usare per proteggere una variabile condivisa. Quando il contratto Guard viene violato, viene generato un avviso C26100.
+L' `_Guarded_by_` annotazione nel codice specifica il blocco da usare per proteggere una variabile condivisa. Quando il contratto Guard viene violato, viene generato un avviso C26100.
 
-## <a name="example"></a>Esempio
+## <a name="examples"></a>Esempi
 
-Nell'esempio seguente viene generato l'avviso C26100 a causa di una violazione del contratto di `_Guarded_by_`.
+Nell'esempio seguente viene generato l'avviso C26100 a causa di una violazione del `_Guarded_by_` contratto.
 
 ```cpp
 CRITICAL_SECTION gCS;
@@ -50,11 +50,9 @@ void Unsafe(DATA* p) {
 }
 ```
 
-La violazione del contratto si verifica perché nella funzione `Unsafe`viene utilizzato un blocco errato. In questo caso, `gCS` è il blocco corretto da usare.
+La violazione del contratto si verifica perché nella funzione viene utilizzato un blocco errato `Unsafe` . In questo caso, `gCS` è il blocco corretto da usare.
 
-## <a name="example"></a>Esempio
-
-Occasionalmente una variabile condivisa deve essere sorvegliata solo per l'accesso in scrittura, ma non per l'accesso in lettura. In tal caso, usare l'annotazione `_Write_guarded_by_`, come illustrato nell'esempio seguente.
+Occasionalmente una variabile condivisa deve essere sorvegliata solo per l'accesso in scrittura, ma non per l'accesso in lettura. In tal caso, usare l' `_Write_guarded_by_` annotazione, come illustrato nell'esempio seguente.
 
 ```cpp
 CRITICAL_SECTION gCS;
@@ -80,4 +78,4 @@ void Unsafe2(DATA2* p) {
 }
 ```
 
-Questo esempio genera anche l'avviso C26100 perché usa un blocco errato nella funzione `Unsafe2`.
+Questo esempio genera anche l'avviso C26100 perché usa un blocco errato nella funzione `Unsafe2` .
