--- a/docs/code-quality/c6014.md
+++ b/docs/code-quality/c6014.md
@@ -7,20 +7,20 @@ f1_keywords:
 helpviewer_keywords:
 - C6014
 ms.assetid: ef76ec88-74d2-4a3b-b6fe-4b0851ab3372
-ms.openlocfilehash: d77dfdaa4861dc7c87627d3555f7a58b2709fda9
-ms.sourcegitcommit: 7bea0420d0e476287641edeb33a9d5689a98cb98
+ms.openlocfilehash: 398d3d5e2d7a151e783baf81a57b54e76c95f957
+ms.sourcegitcommit: c1fd917a8c06c6504f66f66315ff352d0c046700
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 02/17/2020
-ms.locfileid: "77420930"
+ms.lasthandoff: 09/16/2020
+ms.locfileid: "90685857"
 ---
 # <a name="c6014"></a>C6014
 
 > avviso C6014: perdita di memoria.
 
-Questo avviso indica che il puntatore specificato punta alla memoria allocata o a un'altra risorsa allocata che non è stata liberata. L'analizzatore verifica questa condizione solo quando viene specificata l'annotazione `_Analysis_mode_(_Analysis_local_leak_checks_)` SAL. Per impostazione predefinita, questa annotazione viene specificata per il codice della modalità kernel di Windows (driver). Per ulteriori informazioni sulle annotazioni SAL, vedere [utilizzo delle annotazioni SAL perC++ ridurre i difetti del codice C/](../code-quality/using-sal-annotations-to-reduce-c-cpp-code-defects.md).
+Questo avviso indica che il puntatore specificato punta alla memoria allocata o a un'altra risorsa allocata che non è stata liberata. L'analizzatore verifica questa condizione solo quando `_Analysis_mode_(_Analysis_local_leak_checks_)` viene specificata l'annotazione SAL. Per impostazione predefinita, questa annotazione viene specificata per il codice della modalità kernel di Windows (driver). Per ulteriori informazioni sulle annotazioni SAL, vedere [utilizzo delle annotazioni SAL per ridurre i difetti del codice C/C++](../code-quality/using-sal-annotations-to-reduce-c-cpp-code-defects.md).
 
-## <a name="example"></a>Esempio
+## <a name="examples"></a>Esempi
 
 Il codice seguente genera questo avviso:
 
@@ -49,8 +49,6 @@ int main( )
     f();
 }
 ```
-
-## <a name="example"></a>Esempio
 
 Il codice seguente corregge l'avviso rilasciando la memoria:
 
@@ -81,11 +79,11 @@ int main( )
 }
 ```
 
-Questo avviso viene segnalato per le perdite di memoria e di risorse quando la risorsa viene comunemente utilizzata con *alias* in un'altra posizione. Per la memoria viene utilizzato un alias quando un puntatore alla memoria esegue l'escape della funzione per mezzo di un'annotazione del parametro `_Out_`, una variabile globale o un valore restituito. Questo avviso può essere segnalato sulla funzione Exit se l'argomento viene annotato come previsto per il rilascio.
+Questo avviso viene segnalato per le perdite di memoria e di risorse quando la risorsa viene comunemente utilizzata con *alias* in un'altra posizione. Per la memoria viene utilizzato un alias quando un puntatore alla memoria esegue l'escape della funzione per mezzo di un' `_Out_` annotazione di parametro, una variabile globale o un valore restituito. Questo avviso può essere segnalato sulla funzione Exit se l'argomento viene annotato come previsto per il rilascio.
 
-Si noti che l'analisi del codice non riconosce l'implementazione effettiva di un allocatore di memoria (che implica l'aritmetica degli indirizzi) e non riconosce che la memoria è allocata (anche se verranno riconosciuti molti wrapper). In questo caso, l'analizzatore non riconosce che la memoria è stata allocata e genera questo avviso. Per escludere il falso positivo, utilizzare una direttiva `#pragma` sulla riga che precede la parentesi graffa di apertura `{` del corpo della funzione.
+Si noti che l'analisi del codice non riconosce l'implementazione effettiva di un allocatore di memoria (che implica l'aritmetica degli indirizzi) e non riconosce che la memoria è allocata (anche se verranno riconosciuti molti wrapper). In questo caso, l'analizzatore non riconosce che la memoria è stata allocata e genera questo avviso. Per escludere il falso positivo, utilizzare una `#pragma` direttiva sulla riga che precede la parentesi graffa di apertura `{` del corpo della funzione.
 
-Per evitare interamente queste potenziali inconsistenze, utilizzare i meccanismi forniti dalla libreria STL (Standard Template Library) di C++. Sono inclusi [shared_ptr](/cpp/standard-library/shared-ptr-class), [unique_ptr](/cpp/standard-library/unique-ptr-class)e [vector](/cpp/standard-library/vector). Per altre informazioni, vedere [puntatori intelligenti](/cpp/cpp/smart-pointers-modern-cpp) e [ C++ libreria standard](/cpp/standard-library/cpp-standard-library-reference).
+Per evitare interamente queste potenziali inconsistenze, utilizzare i meccanismi forniti dalla libreria STL (Standard Template Library) di C++. Sono inclusi [shared_ptr](/cpp/standard-library/shared-ptr-class), [unique_ptr](/cpp/standard-library/unique-ptr-class)e [vector](/cpp/standard-library/vector). Per altre informazioni, vedere [puntatori intelligenti](/cpp/cpp/smart-pointers-modern-cpp) e [libreria standard C++](/cpp/standard-library/cpp-standard-library-reference).
 
 ```cpp
 // cl.exe /analyze /EHsc /nologo /W4
