--- a/docs/code-quality/c26462.md
+++ b/docs/code-quality/c26462.md
@@ -6,13 +6,13 @@ f1_keywords:
 - C26462
 helpviewer_keywords:
 - C26462
-description: Regola CppCoreCheck che impone Linee guida di base di C++ con. 4
-ms.openlocfilehash: 16cc3d8c5146d84df58a5ee2751f2111a0f0cdeb
-ms.sourcegitcommit: 093f49b8b69daf86661adc125b1d2d7b1f0e0650
+description: Regola CppCoreCheck C26462 che impone Linee guida di base di C++ con. 4
+ms.openlocfilehash: 9387be3e25a1ab0f46dd9d827e72809feb526d93
+ms.sourcegitcommit: 72161bcd21d1ad9cc3f12261aa84a5b026884afa
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 09/03/2020
-ms.locfileid: "89427686"
+ms.lasthandoff: 09/17/2020
+ms.locfileid: "90743048"
 ---
 # <a name="c26462-use_const_pointer_for_variable"></a>C26462 USE_CONST_POINTER_FOR_VARIABLE
 
