--- a/docs/code-quality/c26464.md
+++ b/docs/code-quality/c26464.md
@@ -6,13 +6,13 @@ f1_keywords:
 - C26464
 helpviewer_keywords:
 - C26464
-description: Avviso segnaposto CppCoreCheck per l'imposizione futura con. 4
-ms.openlocfilehash: fbcd6b0938d22bfc78341aecc3370922fdfbc00d
-ms.sourcegitcommit: 093f49b8b69daf86661adc125b1d2d7b1f0e0650
+description: Avviso segnaposto CppCoreCheck C26464 per l'imposizione futura con. 4
+ms.openlocfilehash: e992057a80c0a85fa890382c81f1ee1936734a1c
+ms.sourcegitcommit: 72161bcd21d1ad9cc3f12261aa84a5b026884afa
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 09/03/2020
-ms.locfileid: "89427556"
+ms.lasthandoff: 09/17/2020
+ms.locfileid: "90743022"
 ---
 # <a name="c26464-use_const_pointer_for_elements"></a>C26464 USE_CONST_POINTER_FOR_ELEMENTS
 
