--- a/docs/code-quality/c26465.md
+++ b/docs/code-quality/c26465.md
@@ -6,13 +6,13 @@ f1_keywords:
 - C26465
 helpviewer_keywords:
 - C26465
-description: Regola CppCoreCheck che impone il tipo di Linee guida di base di C++. 3
-ms.openlocfilehash: a3e497b5dab7fdfd80e4340a79019a6909f9a7a6
-ms.sourcegitcommit: 3628707bc17c99aac7aac27eb126cc2eaa4d07b4
+description: CppCoreCheck Rule C26465 che impone Linee guida di base di C++ tipo. 3
+ms.openlocfilehash: 50f84b09cdd42f9715bc51448ad041d50a8b5891
+ms.sourcegitcommit: 72161bcd21d1ad9cc3f12261aa84a5b026884afa
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 08/31/2020
-ms.locfileid: "89194510"
+ms.lasthandoff: 09/17/2020
+ms.locfileid: "90743009"
 ---
 # <a name="c26465-no_const_cast_unnecessary"></a>C26465 NO_CONST_CAST_UNNECESSARY
 
