--- a/docs/code-quality/c26482.md
+++ b/docs/code-quality/c26482.md
@@ -6,13 +6,13 @@ f1_keywords:
 - C26482
 helpviewer_keywords:
 - C26482
-description: Regola CppCoreCheck che impone limiti di Linee guida di base di C++. 2
-ms.openlocfilehash: 55eb0460584db4d5fa50ab9d1b85f141fc873353
-ms.sourcegitcommit: e58918c45316d799c1952ca7797a85adbcd0c472
+description: CppCoreCheck Rule C26482 che impone i limiti di Linee guida di base di C++. 2
+ms.openlocfilehash: 0b316bb9751d7cb1e36b7e996d7fda209b7787f7
+ms.sourcegitcommit: 72161bcd21d1ad9cc3f12261aa84a5b026884afa
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 09/01/2020
-ms.locfileid: "89281627"
+ms.lasthandoff: 09/17/2020
+ms.locfileid: "90742632"
 ---
 # <a name="c26482-no_dynamic_array_indexing"></a>NO_DYNAMIC_ARRAY_INDEXING C26482
 
