--- a/docs/code-quality/c26483.md
+++ b/docs/code-quality/c26483.md
@@ -6,13 +6,13 @@ f1_keywords:
 - C26483
 helpviewer_keywords:
 - C26483
-description: Regola CppCoreCheck che impone limiti di Linee guida di base di C++. 2
-ms.openlocfilehash: 12cc4711d2dcdb380feeec958ae8786236ff5137
-ms.sourcegitcommit: 093f49b8b69daf86661adc125b1d2d7b1f0e0650
+description: CppCoreCheck Rule C26483 che impone i limiti di Linee guida di base di C++. 2
+ms.openlocfilehash: 4fe3feb43530fac41c85c1d842b939059075ea7f
+ms.sourcegitcommit: 72161bcd21d1ad9cc3f12261aa84a5b026884afa
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 09/03/2020
-ms.locfileid: "89427673"
+ms.lasthandoff: 09/17/2020
+ms.locfileid: "90742749"
 ---
 # <a name="c26483-static_index_out_of_range"></a>STATIC_INDEX_OUT_OF_RANGE C26483
 
