--- a/docs/code-quality/c26490.md
+++ b/docs/code-quality/c26490.md
@@ -6,13 +6,13 @@ f1_keywords:
 - C26490
 helpviewer_keywords:
 - C26490
-description: Regola CppCoreCheck che impone Linee guida di base di C++ tipo. 1
-ms.openlocfilehash: 2bbefb3856f065bdd29d9a1fdd12bf16d41481b5
-ms.sourcegitcommit: e58918c45316d799c1952ca7797a85adbcd0c472
+description: CppCoreCheck regola C26490 che impone Linee guida di base di C++ tipo. 1
+ms.openlocfilehash: c50df82e0cdd52a6116802f16371aaefd5529b1c
+ms.sourcegitcommit: 72161bcd21d1ad9cc3f12261aa84a5b026884afa
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 09/01/2020
-ms.locfileid: "89281744"
+ms.lasthandoff: 09/17/2020
+ms.locfileid: "90742723"
 ---
 # <a name="c26490-no_reinterpret_cast"></a>C26490 NO_REINTERPRET_CAST
 
