--- a/docs/code-quality/c26492.md
+++ b/docs/code-quality/c26492.md
@@ -6,13 +6,13 @@ f1_keywords:
 - C26492
 helpviewer_keywords:
 - C26492
-description: Regola CppCoreCheck che impone il tipo di Linee guida di base di C++. 3
-ms.openlocfilehash: b509ba8cf542e215cf07b65375a581c32f1857da
-ms.sourcegitcommit: e58918c45316d799c1952ca7797a85adbcd0c472
+description: CppCoreCheck Rule C26492 che impone Linee guida di base di C++ tipo. 3
+ms.openlocfilehash: 51a37b94226243c2a433d2d90e9481bcf0837457
+ms.sourcegitcommit: 72161bcd21d1ad9cc3f12261aa84a5b026884afa
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 09/01/2020
-ms.locfileid: "89281666"
+ms.lasthandoff: 09/17/2020
+ms.locfileid: "90742710"
 ---
 # <a name="c26492-no_const_cast"></a>C26492 NO_CONST_CAST
 
