--- a/docs/code-quality/c6297.md
+++ b/docs/code-quality/c6297.md
@@ -1,24 +1,24 @@
 ---
 title: C6297
-description: Descrive le cause dell'avviso C26452 di analisi del codice MSVC e come risolvere il problema.
+description: Descrive le cause dell'avviso C6297 di analisi del codice MSVC e come risolvere il problema.
 ms.date: 07/15/2020
 f1_keywords:
 - C6297
 helpviewer_keywords:
 - C6297
 ms.assetid: 17b585f0-75e5-4fc0-935a-143ec67659f4
-ms.openlocfilehash: a5c467292bc87dd81dcc79d57646c20d7f84e309
-ms.sourcegitcommit: e15b46ea7888dbdd7e0bb47da76aeed680c3c1f3
+ms.openlocfilehash: c53351cb283f546d39e17e03fe0e027b82d4151f
+ms.sourcegitcommit: 72161bcd21d1ad9cc3f12261aa84a5b026884afa
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 07/17/2020
-ms.locfileid: "86446675"
+ms.lasthandoff: 09/17/2020
+ms.locfileid: "90741865"
 ---
 # <a name="warning-c6297"></a>Avviso C6297
 
 > Overflow aritmetico: il valore a 32 bit viene spostato, quindi viene eseguito il cast a un valore a 64 bit. Il risultato non può essere un valore previsto
 
-## <a name="remarks"></a>Commenti
+## <a name="remarks"></a>Osservazioni
 
 Questo avviso indica un comportamento errato risultante dalle regole di promozione integrale e dai tipi più grandi di quelli in cui viene in genere eseguita l'aritmetica.
 
