--- a/docs/code-quality/c28112.md
+++ b/docs/code-quality/c28112.md
@@ -1,4 +1,5 @@
 ---
+description: 'Altre informazioni su: C28112'
 title: C28112
 ms.date: 11/04/2016
 ms.topic: reference
@@ -7,20 +8,20 @@ f1_keywords:
 helpviewer_keywords:
 - C28112
 ms.assetid: 2720a5dc-84e9-4f78-a8c7-a320c9f9216b
-ms.openlocfilehash: dc73e6870781c8ec23aeb0ca6de2429cb5b47acc
-ms.sourcegitcommit: 7bea0420d0e476287641edeb33a9d5689a98cb98
+ms.openlocfilehash: 478f782339f0de676a1482b015c907a1d5c93d1c
+ms.sourcegitcommit: d6af41e42699628c3e2e6063ec7b03931a49a098
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 02/17/2020
-ms.locfileid: "77417724"
+ms.lasthandoff: 12/11/2020
+ms.locfileid: "97312345"
 ---
 # <a name="c28112"></a>C28112
 
 > avviso C28112: una variabile A cui si accede tramite una funzione Interlocked deve sempre essere accessibile tramite una funzione Interlocked
 
-Vedere la riga *[numero]* : non è sempre sicuro accedere a una variabile a cui si accede tramite la famiglia di funzioni\* Interlocked in qualsiasi altro modo.
+Vedere la riga *[numero]*: non è sempre sicuro accedere a una variabile a cui si accede tramite la \* famiglia di funzioni Interlocked in qualsiasi altro modo.
 
-Una variabile a cui si accede tramite le routine di supporto esecutivo Interlocked, ad esempio InterlockedCompareExchangeAcquire, viene successivamente utilizzata con una funzione diversa. Sebbene alcune assegnazioni ordinarie, gli accessi e i confronti alle variabili usate dalle routine interlocked\* possano essere accessibili tramite una funzione diversa, il rischio è sufficientemente grande da giustificare l'esame di ogni istanza.
+Una variabile a cui si accede tramite le routine di supporto esecutivo Interlocked, ad esempio InterlockedCompareExchangeAcquire, viene successivamente utilizzata con una funzione diversa. Sebbene sia possibile accedere in modo sicuro a determinate assegnazioni ordinarie, accessi e confronti con le variabili utilizzate dalle routine interlocked utilizzando \* una funzione diversa, il rischio è sufficientemente elevato da giustificare l'esame di ogni istanza.
 
 ## <a name="example"></a>Esempio
 
