--- a/docs/code-quality/c6067.md
+++ b/docs/code-quality/c6067.md
@@ -1,4 +1,5 @@
 ---
+description: 'Altre informazioni su: C6067'
 title: C6067
 ms.date: 11/04/2016
 ms.topic: reference
@@ -7,12 +8,12 @@ f1_keywords:
 helpviewer_keywords:
 - C6067
 ms.assetid: 6fbaee53-daaa-4ba5-9b11-2a8066d86240
-ms.openlocfilehash: 81a8ec2a401093583cae3474ae5909b3c9f779ab
-ms.sourcegitcommit: a1676bf6caae05ecd698f26ed80c08828722b237
+ms.openlocfilehash: 3967e08022d98725bceaa75302582490c3b88f4b
+ms.sourcegitcommit: d6af41e42699628c3e2e6063ec7b03931a49a098
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 09/29/2020
-ms.locfileid: "91499980"
+ms.lasthandoff: 12/11/2020
+ms.locfileid: "97312332"
 ---
 # <a name="c6067"></a>C6067
 
@@ -102,7 +103,7 @@ void f_safe()
 }
 ```
 
-## <a name="see-also"></a>Vedere anche
+## <a name="see-also"></a>Vedi anche
 
 - [sprintf \_ s, \_ sprintf \_ s \_ l, swprintf \_ s, \_ swprintf \_ s \_ l](../c-runtime-library/reference/sprintf-s-sprintf-s-l-swprintf-s-swprintf-s-l.md)
 - [printf, \_ printf \_ l, wprintf, \_ wprintf \_ l](../c-runtime-library/reference/printf-printf-l-wprintf-wprintf-l.md)
