--- a/docs/code-quality/c6324.md
+++ b/docs/code-quality/c6324.md
@@ -1,4 +1,5 @@
 ---
+description: 'Altre informazioni su: C6324'
 title: C6324
 ms.date: 11/04/2016
 ms.topic: reference
@@ -7,12 +8,12 @@ f1_keywords:
 helpviewer_keywords:
 - C6324
 ms.assetid: 08675af3-8957-4640-9bd6-01de71ea1042
-ms.openlocfilehash: 04da9f59870d8f676756da839e175b7dc0f5ecec
-ms.sourcegitcommit: a1676bf6caae05ecd698f26ed80c08828722b237
+ms.openlocfilehash: 7524f7f4e0d4e432ea8b0bf6fdd2048a00ac301d
+ms.sourcegitcommit: d6af41e42699628c3e2e6063ec7b03931a49a098
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 09/29/2020
-ms.locfileid: "91505009"
+ms.lasthandoff: 12/11/2020
+ms.locfileid: "97312293"
 ---
 # <a name="c6324"></a>C6324
 
@@ -50,7 +51,7 @@ void f(char *title )
 }
 ```
 
-## <a name="see-also"></a>Vedere anche
+## <a name="see-also"></a>Vedi anche
 
 - [strcpy, wcscpy, _mbscpy](../c-runtime-library/reference/strcpy-wcscpy-mbscpy.md)
 - [strcpy_s, wcscpy_s, _mbscpy_s](../c-runtime-library/reference/strcpy-s-wcscpy-s-mbscpy-s.md)
