--- a/docs/code-quality/c28159.md
+++ b/docs/code-quality/c28159.md
@@ -1,4 +1,5 @@
 ---
+description: 'Altre informazioni su: C28159'
 title: C28159
 ms.date: 11/04/2016
 ms.topic: reference
@@ -7,18 +8,18 @@ f1_keywords:
 helpviewer_keywords:
 - C28159
 ms.assetid: fab6cd58-0985-4ef6-89a2-64ed04297437
-ms.openlocfilehash: ec24ad71e7c5db3c008987533179dd0e33128917
-ms.sourcegitcommit: 7bea0420d0e476287641edeb33a9d5689a98cb98
+ms.openlocfilehash: 7ab393833fafe445674cd933c7b2d4496fc53d5e
+ms.sourcegitcommit: d6af41e42699628c3e2e6063ec7b03931a49a098
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 02/17/2020
-ms.locfileid: "77416576"
+ms.lasthandoff: 12/11/2020
+ms.locfileid: "97319506"
 ---
 # <a name="c28159"></a>C28159
 
 > avviso C28159: provare a usare un'altra funzione.
 
-Questo avviso viene segnalato per i driver che suggeriscono di usare una chiamata di funzione preferita che è semanticamente equivalente alla funzione chiamata dal driver. Questo è un messaggio di avviso generale. è stata utilizzata l'annotazione `__drv_preferredFunction` (possibilmente con un'annotazione condizionale a `__drv_when`()) per contrassegnare una procedura di codifica non valida.
+Questo avviso viene segnalato per i driver che suggeriscono di usare una chiamata di funzione preferita che è semanticamente equivalente alla funzione chiamata dal driver. Questo è un messaggio di avviso generale. è stata utilizzata l'annotazione `__drv_preferredFunction` (possibilmente con un' `__drv_when` annotazione condizionale a ()) per contrassegnare una procedura di codifica non valida.
 
 ## <a name="example"></a>Esempio
 
