--- a/docs/code-quality/c28215.md
+++ b/docs/code-quality/c28215.md
@@ -1,4 +1,5 @@
 ---
+description: 'Altre informazioni su: C28215'
 title: C28215
 ms.date: 11/04/2016
 ms.topic: reference
@@ -7,15 +8,15 @@ f1_keywords:
 helpviewer_keywords:
 - C28215
 ms.assetid: 47f51185-66f8-4b9c-b614-1d275b388729
-ms.openlocfilehash: 98a49c03f4ae9471fd8951bcb4979bf40aede0fb
-ms.sourcegitcommit: 7bea0420d0e476287641edeb33a9d5689a98cb98
+ms.openlocfilehash: 10643a5a129066f14fe451eea0ad12dfd4ac50e6
+ms.sourcegitcommit: d6af41e42699628c3e2e6063ec7b03931a49a098
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 02/17/2020
-ms.locfileid: "77417500"
+ms.lasthandoff: 12/11/2020
+ms.locfileid: "97319521"
 ---
 # <a name="c28215"></a>C28215
 
 > avviso C28215: non è possibile applicare typefix a un parametro che dispone già di un typefix
 
-L'applicazione di un'annotazione `__typefix` a un parametro che dispone già di tale annotazione è un errore. Le annotazioni `__typefix` vengono utilizzate solo in alcuni casi speciali e questo avviso non è previsto per l'utilizzo normale.
+L'applicazione `__typefix` di un'annotazione a un parametro che dispone già di tale annotazione è un errore. Le `__typefix` annotazioni vengono utilizzate solo in alcuni casi speciali e questo avviso non è previsto per l'utilizzo normale.
