--- a/docs/code-quality/c26430.md
+++ b/docs/code-quality/c26430.md
@@ -1,4 +1,5 @@
 ---
+description: 'Altre informazioni su: C26430 TEST_ON_ALL_PATHS'
 title: C26430
 ms.date: 11/15/2017
 ms.topic: conceptual
@@ -7,12 +8,12 @@ f1_keywords:
 helpviewer_keywords:
 - C26430
 ms.assetid: 3dca2626-8102-4eed-8ff3-73eb3d5c328c
-ms.openlocfilehash: 0d781f6f588ec9a7e461d662a4d1cc94034c2fa4
-ms.sourcegitcommit: ec6dd97ef3d10b44e0fedaa8e53f41696f49ac7b
+ms.openlocfilehash: 4b84c19ba46a68487a420a0c35903e8326134c24
+ms.sourcegitcommit: d6af41e42699628c3e2e6063ec7b03931a49a098
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 08/25/2020
-ms.locfileid: "88843846"
+ms.lasthandoff: 12/11/2020
+ms.locfileid: "97335597"
 ---
 # <a name="c26430-test_on_all_paths"></a>C26430 TEST_ON_ALL_PATHS
 
@@ -22,7 +23,7 @@ ms.locfileid: "88843846"
 
 Se il codice controlla un valore null delle variabili del puntatore, deve eseguire questa operazione in modo coerente e convalidare i puntatori su tutti i percorsi. In alcuni casi l'eccessiva aggressività del controllo del valore null è ancora migliore rispetto alla possibilità di un arresto anomalo del sistema in uno dei rami complessi. Idealmente, è consigliabile eseguire il refactoring di tale codice in modo che sia meno complesso (suddividendo in più funzioni) e basandosi su marcatori come GSL:: not_null (vedere la libreria di supporto delle linee guida) per isolare le parti dell'algoritmo che possono prendere ipotesi sicure sui valori di puntatore validi. La regola TEST_ON_ALL_PATHS consente di individuare le posizioni in cui i controlli dei valori null sono incoerenti (pertanto è possibile che i presupposti richiedano la revisione) o i bug effettivi in cui il potenziale valore null può ignorare il controllo dei valori null in alcuni percorsi di codice.
 
-## <a name="remarks"></a>Osservazioni
+## <a name="remarks"></a>Commenti
 
 - Questa regola prevede che il codice dereferenzia una variabile puntatore in modo da giustificare il controllo del valore null (o l'imposizione di un valore non null). Se non è presente alcuna dereferenziazione, la regola viene sospesa.
   - L'implementazione corrente gestisce solo puntatori semplici (o i relativi alias) e non rileva i puntatori intelligenti anche se i controlli null sono applicabili anche ai puntatori intelligenti.
