--- a/docs/code-quality/c6530.md
+++ b/docs/code-quality/c6530.md
@@ -1,4 +1,5 @@
 ---
+description: 'Altre informazioni su: C6530'
 title: C6530
 ms.date: 11/04/2016
 ms.topic: reference
@@ -7,25 +8,25 @@ f1_keywords:
 helpviewer_keywords:
 - C6530
 ms.assetid: 60e9dc58-e0f1-4a34-8c75-efebaa6cadd2
-ms.openlocfilehash: 073deaca80ac06a8781158b8d79fc5eba8003075
-ms.sourcegitcommit: 7bea0420d0e476287641edeb33a9d5689a98cb98
+ms.openlocfilehash: 554e0b6576555ebb4f4faa9d2e7839575b0f0e68
+ms.sourcegitcommit: d6af41e42699628c3e2e6063ec7b03931a49a098
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 02/17/2020
-ms.locfileid: "77419061"
+ms.lasthandoff: 12/11/2020
+ms.locfileid: "97135460"
 ---
 # <a name="c6530"></a>C6530
 
-> avviso C6530: nome \<stile stringa di formato non riconosciuto >
+> avviso C6530: stile stringa di formato non riconosciuto \<name>
 
 > [!NOTE]
-> Questo avviso viene visualizzato solo nel codice che usa una versione deprecata del linguaggio di annotazione del codice sorgente (SAL). Si consiglia di eseguire il porting del codice per usare la versione più recente di SAL. Per ulteriori informazioni, vedere [utilizzo delle annotazioni SAL per ridurreC++ i difetti del codice C/](../code-quality/using-sal-annotations-to-reduce-c-cpp-code-defects.md).
+> Questo avviso viene visualizzato solo nel codice che usa una versione deprecata del linguaggio di annotazione del codice sorgente (SAL). Si consiglia di eseguire il porting del codice per usare la versione più recente di SAL. Per ulteriori informazioni, vedere [utilizzo delle annotazioni SAL per ridurre i difetti del codice C/C++](../code-quality/using-sal-annotations-to-reduce-c-cpp-code-defects.md).
 
 Questo avviso indica che la proprietà FormatString usa un valore diverso da scanf o printf. Per correggere il problema, esaminare il codice e usare un valore valido per la proprietà Style.
 
 ## <a name="example"></a>Esempio
 
-Il codice seguente genera questo avviso a causa di un errore di digitazione nella proprietà `Style`:
+Il codice seguente genera questo avviso a causa di un errore di digitazione nella `Style` proprietà:
 
 ```cpp
 // C
