--- a/docs/code-quality/c6282.md
+++ b/docs/code-quality/c6282.md
@@ -1,4 +1,5 @@
 ---
+description: 'Altre informazioni su: C6282'
 title: C6282
 ms.date: 11/04/2016
 ms.topic: reference
@@ -7,12 +8,12 @@ f1_keywords:
 helpviewer_keywords:
 - C6282
 ms.assetid: 7dc153d5-fb9f-424a-8afa-4e2661efa51c
-ms.openlocfilehash: a4c65f43f3de8e2d20777e1c0a851312ef81e442
-ms.sourcegitcommit: a1676bf6caae05ecd698f26ed80c08828722b237
+ms.openlocfilehash: 5ed7393e692012652c8393c144ef420c6d46a5c4
+ms.sourcegitcommit: d6af41e42699628c3e2e6063ec7b03931a49a098
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 09/29/2020
-ms.locfileid: "91499920"
+ms.lasthandoff: 12/11/2020
+ms.locfileid: "97198655"
 ---
 # <a name="c6282"></a>C6282
 
@@ -46,6 +47,6 @@ void f( int i )
 }
 ```
 
-## <a name="see-also"></a>Vedere anche
+## <a name="see-also"></a>Vedi anche
 
 [Avviso del compilatore (livello 4) C4706](../error-messages/compiler-warnings/compiler-warning-level-4-c4706.md)
