--- a/docs/cpp/m128i.md
+++ b/docs/cpp/m128i.md
@@ -1,4 +1,5 @@
 ---
+description: 'Altre informazioni su: __m128i'
 title: __m128i
 ms.date: 11/04/2016
 f1_keywords:
@@ -6,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - __m128i keyword [C++]
 ms.assetid: bd245d68-862c-46dd-9903-6c67c7c5dbcd
-ms.openlocfilehash: 2f6356158776141d5a0f7686138fcf7255c72013
-ms.sourcegitcommit: 1f009ab0f2cc4a177f2d1353d5a38f164612bdb1
+ms.openlocfilehash: d9a91d889c45d4bd39a458832fb42710fa1d6120
+ms.sourcegitcommit: d6af41e42699628c3e2e6063ec7b03931a49a098
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 07/27/2020
-ms.locfileid: "87225930"
+ms.lasthandoff: 12/11/2020
+ms.locfileid: "97211037"
 ---
 # <a name="__m128i"></a>__m128i
 
@@ -27,7 +28,7 @@ int main() {
 }
 ```
 
-## <a name="remarks"></a>Osservazioni
+## <a name="remarks"></a>Commenti
 
 Non è consigliabile accedere **`__m128i`** direttamente ai campi. È comunque possibile visualizzare i seguenti tipi nel debugger. Una variabile di tipo **`__m128i`** esegue il mapping ai registri XMM [0-7].
 
@@ -40,7 +41,7 @@ Il **`__m128i`** tipo di dati non è supportato nei processori ARM.
 
 **TERMINA specifica Microsoft**
 
-## <a name="see-also"></a>Vedere anche
+## <a name="see-also"></a>Vedi anche
 
 [Parole chiave](../cpp/keywords-cpp.md)<br/>
 [Tipi incorporati](../cpp/fundamental-types-cpp.md)<br/>
